--- a/src/_Card.css
+++ b/src/_Card.css
@@ -28,7 +28,8 @@
   color: #525252;
 }
 
-.current-card {
+.current-card, 
+.form-div {
   transition: 0.3s;
   font-family: 'Patrick Hand', Arial, Sans-Serif;
   background-image: url('./index-img.png');
@@ -37,7 +38,7 @@
   border-radius: 10px;
   width: 600px;
   height: 300px;
-  margin: 190px auto;
+  margin: 150px auto 0 auto;
   position: relative;
   padding: 10px;
   box-shadow: 0px 10px 20px 5px black;
@@ -122,9 +123,11 @@
   bottom: 0;
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
   margin: 5px 10px;
   left: -2px;
   bottom: 4px;
+  width: 97%;
 }
 
 .card-btn {
@@ -195,4 +198,28 @@
   border-color: black;
   transition: .5s;
   transform: scale(0);
+}
+
+.hello {
+  color: white;
+  font-size: 50px;
+}
+
+form {
+  margin: 13px 0 0 0;
+}
+
+#prompt-form, #answer-form {
+  display: block;
+  margin: -2px 5px 21px 5px;
+  width: 95%;
+  border: solid #525252 2px;
+  height: 22px;
+  font-size: 20px;
+  font-family: 'Patrick Hand', Arial, Sans-Serif;
+}
+
+label {
+  font-size: 24px;
+  color: #525252;
 }
