Add vairables file and refactor card.scss

--- a/src/_Card.scss
+++ b/src/_Card.scss
@@ -15,49 +15,162 @@
 }
 
 .prompt {
-  color: #525252;
-  margin: 2px 5px;
+  color: $color-lead;
   font-size: 34px;
   line-height: 1.55;
+  margin: 2px 5px;
 }
 
-
 .answer {
+  color: $color-lead;
   display: block;
   font-size: 1.3rem;
   margin: 19px 4px;
-  color: #525252;
 }
 
 .current-card, 
 .form-div {
-  transition: 0.3s;
-  font-family: 'Patrick Hand', Arial, Sans-Serif;
   background-image: url('./index-img.png');
   background-size: contain;
-  border: solid grey 5px;
+  border: solid $color-lead 5px;
   border-radius: 10px;
-  width: 600px;
+  box-shadow: 0px 10px 20px 5px black;
+  font-family: $page-font;
   height: 300px;
   margin: 150px auto 0 auto;
   position: relative;
   padding: 10px;
-  box-shadow: 0px 10px 20px 5px black;
+  transition: 0.3s;
+  width: 600px;
   word-wrap: break-word;
 }
 
 .correct-answer {
-  transition: 0.3s;
-  border: 6px solid lime;
+  border: 6px solid $color-correct;
   transform: scale(1.05);
+  transition: 0.3s;
 }
 
 .incorrect-answer {
-  border: 5px solid red;
   animation: shake 0.52s cubic-bezier(.36,.07,.19,.97) both;
-  transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
+  border: 5px solid $color-incorrect;
   perspective: 1000px;
+  transform: translate3d(0, 0, 0);
+}
+
+.saved-answer {
+  border-color: $color-save;
+}
+
+.slide-saved {
+  animation: slide 0.8s linear;
+  position: relative;
+}
+
+.card-btn-div {
+  bottom: 4px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  left: -2px;
+  margin: 5px 10px;
+  position: absolute;
+  width: 97%;
+}
+
+.card-btn {
+  border: solid 3px $color-card-pink;
+  border-radius: 10px;
+  font-family: $page-font;
+  font-weight: bold;
+  font-size: 0.9rem;
+  color: $color-lead;
+  transition: background-color .4s linear;
+  transition: color .4s linear;
+  transition: transform .4s linear;
+  line-height: 110%;
+  
+  &:hover {
+    transform: scale(1.1);
+    transition-duration: 0.2s;
+    box-shadow: 2px 2px 2px 1px $color-lead;
+  }
+  
+}
+
+.correct-btn {
+  border-color: $color-correct;
+  
+  &:hover {
+    background-color: $color-correct;
+    color: black;
+  }
+}
+
+.incorrect-btn {
+  border-color: $color-incorrect;
+  
+  &:hover {
+    background-color: $color-incorrect;
+    color: white;
+  }
+}
+
+.save-card-btn {
+  border-color: $color-save;
+  
+  &:hover {
+    background-color: $color-save;
+    color: white;
+  }
+}
+
+.splash {
+  color: white;
+  transition: .3s;
+  font-size: 5rem;
+  font-family: $page-font;
+  margin: 500px 0 0 0;
+}
+
+.delete-card-btn {
+  border-color: $color-unsave;
+  color: $color-unsave;
+  
+  &:hover {
+    background-color: $color-unsave;
+  }
+}
+
+.delete {
+  border-color: $color-unsave;
+  transition: .5s;
+  transform: scale(0);
+}
+
+.hello {
+  color: white;
+  font-size: 50px;
+}
+
+form {
+  margin: 13px 0 0 0;
+}
+
+#prompt-form, #answer-form {
+  display: block;
+  margin: -2px 5px 21px 5px;
+  width: 95%;
+  border: solid $color-lead 2px;
+  height: 22px;
+  font-size: 20px;
+  font-family: $page-font;
+}
+
+label {
+  font-size: 24px;
+  color: $color-lead;
 }
 
 @keyframes shake {
@@ -108,119 +221,4 @@
     left: 640px;
     bottom: 370px;
   }
-}
-
-.saved-answer {
-  border-color: rgb(0, 217, 255);
-}
-
-.slide-saved {
-  animation: slide 0.8s linear;
-  position: relative;
-}
-
-.card-btn-div {
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  margin: 5px 10px;
-  left: -2px;
-  bottom: 4px;
-  width: 97%;
-}
-
-.card-btn {
-  border: solid 3px #ff8c8f;
-  border-radius: 10px;
-  font-family: 'Patrick Hand', Arial, Sans-Serif;
-  font-weight: bold;
-  font-size: 0.9rem;
-  color: #525252;
-  transition: background-color .4s linear;
-  transition: color .4s linear;
-  transition: transform .4s linear;
-  line-height: 110%;
-
-  &:hover {
-    transform: scale(1.1);
-    transition-duration: 0.2s;
-    box-shadow: 2px 2px 2px 1px grey;
-  }
-
-}
-
-.correct-btn {
-  border-color: rgb(0, 255, 0);
-
-  &:hover {
-    background-color: rgb(0, 255, 0);
-    color: black;
-  }
-}
-
-.incorrect-btn {
-  border-color: red;
-
-  &:hover {
-    background-color: red;
-    color: white;
-  }
-}
-
-.save-card-btn {
-  border-color: rgb(0, 217, 255);
-
-  &:hover {
-    background-color: rgb(0, 217, 255);
-    color: white;
-  }
-}
-
-.splash {
-  transition: .3s;
-  font-size: 5rem;
-  color: white;
-  font-family: 'Patrick Hand', Arial, Sans-serif;
-  margin: 500px 0 0 0;
-}
-
-.delete-card-btn {
-  border-color: black;
-  color: black;
-
-  &:hover {
-    background-color: black;
-  }
-}
-
-.delete {
-  border-color: black;
-  transition: .5s;
-  transform: scale(0);
-}
-
-.hello {
-  color: white;
-  font-size: 50px;
-}
-
-form {
-  margin: 13px 0 0 0;
-}
-
-#prompt-form, #answer-form {
-  display: block;
-  margin: -2px 5px 21px 5px;
-  width: 95%;
-  border: solid #525252 2px;
-  height: 22px;
-  font-size: 20px;
-  font-family: 'Patrick Hand', Arial, Sans-Serif;
-}
-
-label {
-  font-size: 24px;
-  color: #525252;
 }
