--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Patrick+Hand');
+
 $color-lead: #525252;
 $color-correct: lime;
 $color-incorrect: red;
